--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 /* Google Font */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@700&family=Roboto:wght@400;700&display=swap');
 
 body{
-  font-family: 'DM Sans', sans-serif;
+  font-family: var(--primary-font);
 }
 :root{
-  --primary-font-color: #FFFFFF;
-  --secondary-font-color: #1E0E62;
-  --primary-bg-color: #FFFFFF;
-  --secondary-bg-color: #482BE7;
+  --primary-font: 'Roboto', sans-serif;
+  --secondary-font: 'Bebas Neue', cursive;
+  --optional-font: 'Montserrat', sans-serif;
+  --primary-font-color: #3E3E3E;
+  --secondary-font-color: #363958;
+  --menu-color: #3C3C3C;
 }
 
 /* ========================= */
@@ -30,43 +32,9 @@ ul{
   /* Header Area CSS */
 /* ========================= */
 .header .navbar {
-  padding: 30px 0;
+  padding: 39px 0;
 }
-.header .navbar-light .navbar-nav .nav-link{
-  color: var(--secondary-font-color);
-  font-size: 16px;
-}
-.header .navbar-light .navbar-nav .nav-item {
-  margin-left: 40px;
-}
-.header .sign-in-btn {
-  display: inline-block;
-  color: var(--secondary-font-color);
-  margin-right: 28px;
-  font-weight: 500;
-  font-size: 16px;
-}
-.header .sign-up-btn{
-  background: var(--secondary-bg-color);
-  padding: 9px 22px;
-  border-radius: 30px;
-  color: var(--primary-font-color);
-}
-
-/* ========================= */
-  /* Hero Area CSS */
-/* ========================= */
-.hero .learn-more-btn {
-  background-color: var(--secondary-bg-color);
-  color: var(--primary-font-color);
-  padding: 17px 33px;
-  border: 0;
-}
-.hero .hero-content p{
-  margin-bottom: 40px;
-  margin-top: 24px;
-}
-.hero-form {
-  background:  var(--secondary-bg-color);
-  padding: 40px;
+.header .navbar-nav .nav-link{
+  color: var(--menu-color);
+  margin-left: 20px;
 }
