--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,45 @@ color: #FABE4C;
 .women-card .cmn-btn{
   padding: 10px 24px;
 }
+
+/* ========================= */
+  /* Contact Area CSS */
+/* ========================= */
+.contact {
+  margin-bottom: 120px;
+}
+.contact-detail {
+  padding: 10px 30px;
+  box-shadow: 0px 10px 30px rgba(27, 2, 2, 0.25);
+  border-radius: 20px;
+}
+.contact-content {
+  padding: 10px 20px;
+}
+.contact-content img {
+  margin-top: -10px;
+}
+.contact-content h4 {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  color: var(--secondary-font-color);
+}
+.contact-content p{
+  font-size: 16px;
+  margin-bottom: 0;
+  line-height: 26px;
+  color: var(--primary-font-color);
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px){
+  .cmn-btn {
+    padding: 8px 16px;
+  }
+  .women-card .cmn-btn {
+    padding: 6px 10px;
+  }
+  .cmn-btn i{
+    font-size: 16px;
+  }
+}
